<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_light2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:alpha="0.1"
        android:src="@drawable/ic_permit_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/permission_and_advertise">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/blue_ad_light"
                android:gravity="center"
                android:text="@string/app_name_short"
                android:textColor="@color/blue_ad"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_20sdp"
                android:text="@string/please_grant_the_following_permissions_in_order_to_enjoy_the_full_app_experience"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_16sdp">


                <LinearLayout
                    android:id="@+id/linContacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/number_one" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_call"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_grant_the_following_permissions_in_order_to_enjoy_the_full_app_experience"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/number_two" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notification"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_be_able_receieve_notifications"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/number_three" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera_des"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/number_four" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/media_storage"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/media_storage_des"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linSetAdDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_34sdp"
                        android:layout_height="@dimen/_34sdp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/number_five" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/draw_over_the_apps"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_show_on_top_of_other_apps_our_pro_ngallery_widgets"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_11sdp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/permission_and_advertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/allowPermissionBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/permission_button_background"
            android:text="@string/Get_started"
            android:textAllCaps="false"
            android:textColor="@color/white_default"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/mTvPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/agree_privacy"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />


    </LinearLayout>

</RelativeLayout>