<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clipToPadding="true"
    app:cardBackgroundColor="@color/trans"
    app:cardCornerRadius="@dimen/dim_5"
    app:cardElevation="@dimen/dim_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dim_20"
        android:paddingTop="@dimen/dim_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/sip_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim_9"
            android:text="@string/permission_dialog_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/sip_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20"
            android:layout_marginBottom="@dimen/dim_10"
            android:orientation="horizontal"
            android:padding="@dimen/dim_5">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/dim_5"
                android:layout_toStartOf="@id/txtSubmit"
                android:gravity="center"
                android:paddingLeft="@dimen/dim_20"
                android:paddingTop="@dimen/dim_10"
                android:paddingRight="@dimen/dim_20"
                android:paddingBottom="@dimen/dim_10"
                android:text="@string/dialog_cancel"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/sip_15" />

            <TextView
                android:id="@+id/txtSubmit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/pin_l2"
                android:gravity="center"
                android:paddingLeft="@dimen/dim_20"
                android:paddingTop="@dimen/dim_10"
                android:paddingRight="@dimen/dim_20"
                android:paddingBottom="@dimen/dim_10"
                android:text="@string/permission_dialog_ok"
                android:textColor="@color/white_default"
                android:textSize="@dimen/sip_14"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>